--- a/VRChat/95/914195.html
+++ b/VRChat/95/914195.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PaNA/m7ZPzyUFz1kw5NEMNSIESunbcBmVvlfZsRdQRw="></script>
+    "CiJziIj8ZElhcXOR+7IocKPUBTqWktGfoyDH8RV9wVo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリ・チビクロイニャン","description":"「ローポリ・チビクロイニャン」モデルのunitypackageとfbxデータです。\nMMDボーンが入っています、指ボーンはありません。\n\nunityや3Dモデリングソフトでお使いいただけます。\nVRChatにアバターとしてアップロードできます\nワールドの小物として部屋に置いたり、\nアクセサリーとして他モデルにくっつけるのもOKです。\n※著作権は放棄しておりません\n\n■利用規約\nこちらを御覧ください\nhttps://kuroneko-youhinten.wixsite.com/mysite/kiyaku-preview\n\n■免責事項\n黒井が制作した3Dモデルに、起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。","url":"https://booth.pm/ja/items/914195","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/914195/a779ba00-c2c5-4be1-a466-4b42f7e9602e_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PaNA/m7ZPzyUFz1kw5NEMNSIESunbcBmVvlfZsRdQRw="></script>
+    nonce="CiJziIj8ZElhcXOR+7IocKPUBTqWktGfoyDH8RV9wVo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/914195/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/914195/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
