--- a/VRChat/62/892762.html
+++ b/VRChat/62/892762.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "I0n2Chz9ooEbvM9WJPa7I5mS/MEqwpWp5Bp9+RgIbj0="></script>
+    "cXRmKTjTun+Hh18LQid8PJGVf3r238LvkrKP2gSAuQc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ばーちゃる勇気「やってみよ！」","description":"　ソーシャルVRの今と未来に興味がある方、地道に活動してる系のバーチャルYouTuberさん、VR大好きな「おきゅたんbot」の細かい話を聞いてみたい方に。\n\n　この本では、「やってみよ！　VTuber」、「やってみよ！　VR生活」の２本立てで、VRに暮らす日常（VRのある未来）をお届けします。\n\n　約100ページ（約４万５千字）です。\n\n　お礼と言ってはなんだけど、こんなオマケもありますっ\n\n●【別冊付録】VRポートレート「おきゅれーと」付き！\n　（写真部分14ページ…でしたが、100部感謝の追加アップデートで50ページ以上になりました）\n\n●【初版（Ver.1.0.X）限定特典】着せ替えおきゅたん付き！\n　（世にも珍しいVRヘッドセットのある着せ替え紙人形）\n\n※すべてデジタルデータです。着せ替えおきゅたんなど、もし印刷する場合はご自身でお願いします。\n\n※売上は機材、学習データ、紹介するVRソフトの購入費など、今後のVR応援活動に使わせていただければ……＞＜　（まいてぃ999さんにイラスト代として還元もしました）\n\n【更新情報】\n\n2018.10.1 おきゅれーと Ver.1.1.0\n\n・「おきゅれーと」をVer.1.1に更新し、大幅に（40ページぐらい）写真を追加しました。※「ばーちゃる勇気」本編はVer.1.0.2のままです。\n\n2018.6.14 ばーちゃる勇気 Ver.1.0.2\n\n・ばーちゃる勇気「やってみよ！」に更新履歴、ページ番号、巻末に初版購入者のお名前を追記。実験的にepub形式も追加。\n・おまけのマッハ写真集「おきゅれーと」に4ページ追加。\n\n\n【くわしく】\n\n　VRの応援という意味では、ゲームやツール系のVRアプリも紹介したいんだけど、それは動画でやるとして。この本ではテーマを絞って、主にソーシャルVR、とくにVRChatを中心に話します。ハウツー本ではなくて、体験を伝える感じかな？　何か参考になるといいなぁ。\n\n　「やってみよ！　VTuber」では、VTuberに興味がある方向けの参考情報として、わたしがどんなふうに始めて、どうしてきたか、目まぐるしいバーチャル活動の裏側をかいつまんで紹介するよ。\n\n　「やってみよ！　VR生活」では、わたしがVRで出会った印象的な出来事や、VRの衣食住について紹介したり。ごちゃまぜな感じを楽しんでね。\n\n\n※途中【メタ】印があるところは、わたしが観測・想像している、わたしに関するメタ的な話が混じっているので、メタなことを知りたくない方は全力で飛ばしてね！","url":"https://booth.pm/ja/items/892762","offers":{"priceCurrency":"JPY","@type":"Offer","price":"970"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/892762/19c41bc3-467e-43e2-a10c-86c436520535_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I0n2Chz9ooEbvM9WJPa7I5mS/MEqwpWp5Bp9+RgIbj0="></script>
+    nonce="cXRmKTjTun+Hh18LQid8PJGVf3r238LvkrKP2gSAuQc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/892762/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/892762/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
