updated at: 2023-04-25 21:16, 何者かになろうとして挫折した君へ - もみじ屋 - BOOTH

--- a/VRChat/66/879266.html
+++ b/VRChat/66/879266.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1Ou+D9d7Zoap7E8W9JZNN3/rWxSUfJvWpENtQXFa/ZU="></script>
+    "HNtAKDJNzLLzwNN7COgPVaj9ykTBTjZft/0WMf5xV0c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"何者かになろうとして挫折した君へ","description":"TwitterでVTuberになったりVRChatデビューする人たちが増えてきた。\nみんなが新しい事を始めて輝いている。\n\nでも中には過去の失敗や躓きで新しい事に挑戦出来なくなってしまった人が居ると思う。\n\nやらなければ始まらないなんて誰にでも分かる。\n\nでも自分の劣等感が邪魔をして動くことが出来ない…\n\n僕もこれを書く数日前までそうだった。\n\nでもたった一つの気づきで劣等感を克服する事が出来た。\n\n以前の僕と同じように悩んでいる人が再び新しい事に挑戦出来るようになればと思って書きました。\n\n形式:PDF\nページ数:16p\n字数:約3500字","url":"https://booth.pm/ja/items/879266","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6ef357c2-39e8-437c-8681-3bdbcc252853/i/879266/117424a8-9847-47aa-8c70-795b53ceca5e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1Ou+D9d7Zoap7E8W9JZNN3/rWxSUfJvWpENtQXFa/ZU="></script>
+    nonce="HNtAKDJNzLLzwNN7COgPVaj9ykTBTjZft/0WMf5xV0c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/879266/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/879266/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
