--- a/VRChat/97/876097.html
+++ b/VRChat/97/876097.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AXPb+oGianAtJDK78qyEmvxvVFLwemYoA/WzK3YCMzU="></script>
+    "Q3AAkCKXBk+XwozDTpR6r0pHkujkUS9goLf1MacfAqw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"mixamoでHumanoidボーンを入れよう","description":"自作３Dモデルの形はやっとできたけど、ボーンとかウェイトとかわけわからん！難しい！無理！！\n\nそんな人の味方、我らがmixamo。\nこれは人型の3Dモデルに謎の技術でいい感じのウェイトがついたボーンを入れてくれるスグレモノ。これでかなり時短できるのではなかろうか。\n\nこのPDFではmixamoで人型ボーン（Humanoid）を入れる手順を解説しております。\nこれで自作モデルを動かせるよ！やったね！\nボーン位置やウェイトが気に入らなかったときの細かい調整は各自でやってね（小声）\n\n※mixamoを使ったボーンはVRChatにアップする時UpperChestにエラーが出ますが、その対処法も書いてあります。\n\n※スクリーンショットや操作手順は編集時（2018年4月）のものとなります。\n\n※この文書によって発生したいかなるトラブルにおいても、一切の保障は致しかねます。ご了承ください。","url":"https://booth.pm/ja/items/876097","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c592bf85-f4a6-4832-9ca2-e7248eb006f8/i/876097/b8fe1b30-79d8-49f7-b7eb-b603d2f1bcfc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AXPb+oGianAtJDK78qyEmvxvVFLwemYoA/WzK3YCMzU="></script>
+    nonce="Q3AAkCKXBk+XwozDTpR6r0pHkujkUS9goLf1MacfAqw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/876097/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               176
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/876097/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               176
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
