updated at: 2023-04-25 21:17, 万楽えねの⾃伝 〜鬱、虐待、ADHDその他多くの困難に直⾯しながらも幸せな⼈⽣を⽣きる⽅法〜 - maguraene - BOOTH

--- a/VRChat/08/874108.html
+++ b/VRChat/08/874108.html
@@ -72,9 +72,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -104,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6J3dO04uYj4jDtqP7ywds2pHqcKI9t3r4Twep79eNEE="></script>
+    "75Eg1QIYWbBqsrloEfDD+hMQoX2uTgJa8oIF/E0V8yE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"万楽えねの⾃伝 〜鬱、虐待、ADHDその他多くの困難に直⾯しながらも幸せな⼈⽣を⽣きる⽅法〜","description":"文章1万文字前後\n2.66 MB\nこの作品の内容には鬱要素、発達障害等⾒る⽅にとって\nは不快に感じてしまう要素が含まれていますのでご注意\nください。\n暗い話を⾒たくない場合はVRChatの欄から読んでくだ\nさい。\nこの作品はPANORA（株式会社パノラプロ）様主催\n「マッハソン」にて7時間の制限中にて執筆されたもの\nです。\n平成30年5⽉20⽇万楽えね","url":"https://booth.pm/ja/items/874108","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/28bb3fb7-27ce-4cf6-bfb3-3b7a068ac0f3/i/874108/42ba5e19-b422-4322-a6a9-254474b0a4b4_base_resized.jpg"}
     </script>
@@ -117,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6J3dO04uYj4jDtqP7ywds2pHqcKI9t3r4Twep79eNEE="></script>
+    nonce="75Eg1QIYWbBqsrloEfDD+hMQoX2uTgJa8oIF/E0V8yE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +138,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,7 +154,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -194,7 +194,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/874108/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               345
@@ -209,14 +209,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/874108/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               345
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
