--- a/VRChat/67/1340967.html
+++ b/VRChat/67/1340967.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1wvsgN9auYCrNQLD6yLKTVtRbtb9///HyY8UYqquNA4="></script>
+    "Srt41ZyQX5jl3Tm6LdOOdtMIKcWxdM6CIWnCEERu21I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けニコニコキャップ","description":"VRC向けのキャップの3Dモデルです。\n☆内容物\n・psd...cap.psdとcap1.psdが入っています。\n・texture...cap.pngとcap1.pngが入っています。\n・cap.fbx...capのfbxです。\n・cap.unitypakage...capのunitypakageです。\n・README.txt...必ず読んでください\n\n☆注意\n・色は灰色の1色のみです。\n・ロゴの部分は好きに変えれます.\ntextureは２つありますが、紹介画像のように少し違うだけですが、よかったら。。。\n\n使用前に同梱されている利用規約を必ずお読みください。","url":"https://booth.pm/ja/items/1340967","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0f59b4f0-e50a-4935-aa78-b1833cb81066/i/1340967/279cf1a1-57a0-451c-88e1-49de9f8a85ff_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1wvsgN9auYCrNQLD6yLKTVtRbtb9///HyY8UYqquNA4="></script>
+    nonce="Srt41ZyQX5jl3Tm6LdOOdtMIKcWxdM6CIWnCEERu21I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1340967/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1340967/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
