--- a/VRChat/12/1340912.html
+++ b/VRChat/12/1340912.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zmxcnUAb9RnFVJJf3jhSgFS3l2pJHiuBqXKxsrG9Mxk="></script>
+    "uFOipgxL+0hNsADRZY9CuiE4mI2m0IXkSoxVTUgp1qU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バーチャルニキシー管時計【VRChat･Unity想定】","description":"VRChatや他のUnity環境での利用を想定した，実際に時間表示が可能なニキシー管時計の3Dモデルです．VRChatに依存しない独立環境でも時間表示が可能なスクリプトが付属しています．\nA 3D model of a Nixie tube clock that can actually display the time, for use with VRChat or other standalone Unity environments, with scripts.\n\nこだわりポイント:\n　● 現物の金属細工感が出るようにポリゴン数を割いています\n　● 数字の表示位置が現物のように前後します\n　● 表示が微妙にちらつくようにしてあります(OFFにもできます)\n　● posteffectなしでもある程度光っているよう見えます\n　　● (電極自体が発光しているのではありません)\n　　● (bloomをONにするほうが断然キレイです)\n　● SIDEVIEWタイプとTOPVIEWタイプの2種類用意しています．\n\n全体で約5万ポリゴンあり，マテリアル数も12と決して軽量とは言えません．ほどほどに細かく作成しているため，どちらかというとニキシー管自体を愛でたい人向けです．\n\n[2021-05-23 v2.0.0] 数字表示用スクリプトを追加．階層構造を修正，サンプルシーン変更．\n\n石油王向けオプションにはblendファイルを同梱していますが，あくまでもおまけです．\n\nこちらのVRChatワールドにデモとして設置してあります。/ DEMO WORLD\nhttps://www.vrcw.net/world/detail/wrld_56b348fc-b1cb-4242-8587-9eb8e01ef399\n\n\nサポートや質問用のDiscordを設けているので，参加していただけると幸いです．更新連絡もスムーズになる他， WIPなプロジェクトの進捗を見ることができます．\nhttps://discord.gg/ShwP4Mj","url":"https://booth.pm/ja/items/1340912","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/81541f91-c514-450c-b882-988fe98aaa68/i/1340912/3902697b-fe8d-4157-8a07-afcfb799ce3e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zmxcnUAb9RnFVJJf3jhSgFS3l2pJHiuBqXKxsrG9Mxk="></script>
+    nonce="uFOipgxL+0hNsADRZY9CuiE4mI2m0IXkSoxVTUgp1qU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1340912/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               931
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1340912/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               931
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
