updated at: 2023-04-25 21:22, ローポリラジカセの3Dモデル - 鮪府Industries - BOOTH

--- a/VRChat/00/1384200.html
+++ b/VRChat/00/1384200.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IxUJwX0xdQL5w0IRFUtxiA0SFjw9CqVi6dLcEZ3D9Co="></script>
+    "5fXwDtKORjscA3vRUNik+P+Q2onVQvWY3QGBCKPSWJ8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリラジカセの3Dモデル","description":"担いだらカッコ良さそうなラジカセの3Dモデルです。アンテナは別オブジェクトとして作ってあるので、角度等を変更できます。\nサイファーやMCバトルの場に置いたり、部屋の賑やかし等に使ってあげてください。\n\n細かい外見やポリゴン、テクスチャの詳細は埋め込まれたSketchfabから確認できます。\n\n\n・Tris：352\n・テクスチャ解像度：256×256(ラジカセ本体)2×2(アンテナ)\n・テクスチャ数：3枚\n・マテリアル数：2","url":"https://booth.pm/ja/items/1384200","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/f215380d-1931-4039-9529-a102e7243a1f/i/1384200/c09ae34a-0626-4dfe-90d7-a112da9c1d1c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IxUJwX0xdQL5w0IRFUtxiA0SFjw9CqVi6dLcEZ3D9Co="></script>
+    nonce="5fXwDtKORjscA3vRUNik+P+Q2onVQvWY3QGBCKPSWJ8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1384200/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1384200/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
