updated at: 2023-04-25 21:22, 【VRChat向け】瓶詰めの箱庭 - 魔すた屋 - BOOTH

--- a/VRChat/50/1384050.html
+++ b/VRChat/50/1384050.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bopQZ29dsyTU6sdDFivKC54Xie+Caf3Ck7qHEMAns0Y="></script>
+    "p3Ae/+IPD77nWZ0wtpThhve2BLNw1dkvQR1N/frxDRk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】瓶詰めの箱庭","description":"ポリゴン数：13365\nマテリアル数：2\nテクスチャ数：1\n\nGenericアバターとして使用するためのダミーボーンが入っていますが不要な場合は削除してご使用ください。\n\n【利用規約】\n特になし。\nご自由にお使いください。","url":"https://booth.pm/ja/items/1384050","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/1384050/6d0c48a5-c6ee-449e-a7b5-4b4d038a33c9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bopQZ29dsyTU6sdDFivKC54Xie+Caf3Ck7qHEMAns0Y="></script>
+    nonce="p3Ae/+IPD77nWZ0wtpThhve2BLNw1dkvQR1N/frxDRk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1384050/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1384050/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
