updated at: 2023-04-25 21:24, Halcyon - TOTOMの倉庫 - BOOTH

--- a/VRChat/61/1332261.html
+++ b/VRChat/61/1332261.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yssZXixjSPR3Oaklyv10AWeR66GmNLSrbj3NgSVNdSw="></script>
+    "SxeILpKXy+OSwBxQDXfIJUBbUPu0+JNavEa95vJ8YGs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Halcyon","description":"ポリゴン数 864\n\nUnitypackageにしてます。\n\n商用可です。\n\n※自作発言　二次配布、販売　は禁止です。\n\n詳しい利用規約は\nhttps://totom.booth.pm/items/2117789\nにあります。\n\n============注意============\n\nGemshaderなど宝石に使えるシェーダーを用意してください。","url":"https://booth.pm/ja/items/1332261","offers":{"priceCurrency":"JPY","@type":"Offer","price":"250"},"image":"https://booth.pximg.net/c/620x620/9d1d5f3b-a0fa-4744-b690-3bb917ff7e3c/i/1332261/ece3d80e-7be7-4e6e-b409-3f14ef024e0e_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yssZXixjSPR3Oaklyv10AWeR66GmNLSrbj3NgSVNdSw="></script>
+    nonce="SxeILpKXy+OSwBxQDXfIJUBbUPu0+JNavEa95vJ8YGs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1332261/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               138
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1332261/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               138
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
