updated at: 2023-04-25 21:25, 楽器モデルセット - bisy`s shop - BOOTH

--- a/VRChat/48/1333548.html
+++ b/VRChat/48/1333548.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IJIVgn55gcU41JezDp+GdwGiCf5OBrA+fbglec4lGmM="></script>
+    "lBgj1/DwGhge5quSzZGlJMTdHZ9YFgNzOzxFyt9eKag="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"楽器モデルセット","description":"楽器モデルの3DCGモデルセットです。\n1.エレキギター＋アンプセット\n2.アコースティックギター+太鼓セット（バチ2種）\n3.リュート+竪琴セット\n\n全品セットは割引があるのでお得です！\n\n基本内容物\nUnityPackage\nfbxファイル\nテクスチャ\n\n改変自由・再配布不可(VRCHATにおけるパブリックアバターは可)","url":"https://booth.pm/ja/items/1333548","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1333548/3fe99e54-555a-47c1-beb2-8b4240b7d856_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IJIVgn55gcU41JezDp+GdwGiCf5OBrA+fbglec4lGmM="></script>
+    nonce="lBgj1/DwGhge5quSzZGlJMTdHZ9YFgNzOzxFyt9eKag="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1333548/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1333548/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
