updated at: 2023-04-25 21:26, ユイノエ肌｜#VRoid - #YUINOESTORE - BOOTH

--- a/VRChat/06/1327006.html
+++ b/VRChat/06/1327006.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Bg7MId9ZPRc7xXpsn+XQMgKUSD1DB72kvV59sScKBOg="></script>
+    "HbeNjNVSi3FB35gsQ3ubaCjTU4ZB/KLAKxirgYasGZI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ユイノエ肌｜#VRoid","description":"デフォルトの肌をベースにマットな質感を残しつつも、やわらかく血色の良い肌色を表現した顔と体の肌テクスチャです。\nメイクなしの肌、二重、頬染め、唇染め大小、鼻ハイライト、鼻ラインが各々分かれたデータとメイクアップ済みのデータが付属します。\nパーツを組み合わせて好みのお顔にメイクアップ！\n\n特典版では染めと染めのハイライトが分れているのでより詳細にこだわることができます。\n詳しくは同梱ファイル・使い方をご参照ください。\n\n黒髪やこげ茶などの暗く濃い髪色にはノーマルが、白髪や水色などの明るく薄い髪色にはペールがお勧めです。\n\nアイライン部分の色抜け対策済みですが形状によっては色抜けしてしまう場合がございます。その場合は適宜ご調整ください。\n\nお着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。\nTwitter: https://twitter.com/yui_noe","url":"https://booth.pm/ja/items/1327006","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1500"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1327006/540fca6d-7be4-4469-8b99-52471043aa87_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Bg7MId9ZPRc7xXpsn+XQMgKUSD1DB72kvV59sScKBOg="></script>
+    nonce="HbeNjNVSi3FB35gsQ3ubaCjTU4ZB/KLAKxirgYasGZI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1327006/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               151
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1327006/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               151
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
